[package]
name = "binal"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.23.2"
iced-x86 = "1.21.0"
num_enum = "0.7.4"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
