[package]
name = "binal"
version = "0.1.0"
edition = "2024"

[dependencies]
iced-x86 = "1.21.0"
num-traits = "0.2.19"
num_enum = "0.7.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"


[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
